fix (#1): update bug-report.yml with a correct defautl value
Signed-off-by: Reanimated Man X <me@rmx.codes>

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -35,7 +35,7 @@ body:
       options:
         - 2.x.x (Current)
         - 3.x.x (Next)
-      default: 2.x.x
+      default: 0
     validations:
       required: true
   - type: dropdown
