--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: GitHub Community Support
-    url: https://github.com/orgs/community/discussions
+  - name: 💖 GitHub Community Support
+    url: https://github.com/reanimatedmanx/nextra/discussions
     about: Please ask and answer questions here.
-  - name: GitHub Security Bug Bounty
+  - name: 🤫 GitHub Security Bug Bounty
     url: https://mail@rmx.codes
     about: Please report security vulnerabilities here.
